--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -281,7 +281,7 @@
   }
   .f5 {
     display: grid;
-    grid-template-columns: repeat(1, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     margin-left: 2.5rem;
     justify-content: space-between;
     padding: 1.5rem;
